Figure und Element verbessert